--- a/index.html
+++ b/index.html
@@ -1,297 +1,52 @@
+
 <!DOCTYPE html>
-<html lang="th">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Brain Sora 2 + Image Ref</title>
-    <style>
-        body {
-            font-family: "Prompt", sans-serif;
-            background: linear-gradient(135deg, #0f0f1e, #1a1a2e);
-            color: #e0e0ff;
-            padding: 30px;
-            max-width: 900px;
-            margin: 0 auto;
-        }
-        h1 {
-            text-align: center;
-            color: #00ffcc;
-            text-shadow: 0 0 20px #00ffcc;
-        }
-        .container {
-            background: rgba(20, 20, 40, 0.9);
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 0 30px rgba(0, 255, 200, 0.3);
-        }
-        label {
-            display: block;
-            margin-top: 20px;
-            font-weight: bold;
-            color: #00ffcc;
-        }
-        input, select, textarea {
-            width: 100%;
-            padding: 12px;
-            margin-top: 8px;
-            background: #1e1e3a;
-            border: 1px solid #00ffcc;
-            border-radius: 10px;
-            color: white;
-        }
-        textarea {
-            height: 120px;
-            resize: vertical;
-        }
-        button {
-            margin-top: 30px;
-            padding: 15px 40px;
-            font-size: 18px;
-            background: #00ffcc;
-            color: #000;
-            border: none;
-            border-radius: 50px;
-            cursor: pointer;
-            box-shadow: 0 0 20px rgba(0, 255, 200, 0.6);
-            transition: 0.3s;
-        }
-        button:hover {
-            background: #00ccaa;
-            transform: scale(1.05);
-        }
-        #loading {
-            margin-top: 20px;
-            color: #00ffcc;
-            font-style: italic;
-            display: none;
-        }
-        #output {
-            margin-top: 40px;
-            padding: 25px;
-            background: #111122;
-            border-radius: 15px;
-            border: 1px solid #00ffcc;
-            white-space: pre-wrap;
-            display: none;
-            max-height: 600px;
-            overflow-y: auto;
-        }
-        .image-preview {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 10px;
-        }
-        .image-preview img {
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-            border-radius: 10px;
-            border: 2px solid #00ffcc;
-        }
-        .upload-area {
-            border: 2px dashed #00ffcc;
-            border-radius: 15px;
-            padding: 20px;
-            text-align: center;
-            margin-top: 10px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-        .upload-area:hover {
-            background: rgba(0, 255, 200, 0.1);
-        }
-        .credit {
-            text-align: center;
-            margin-top: 50px;
-            font-size: 14px;
-            color: #6666aa;
-        }
-    </style>
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
-        <h1>🧠 Master Brain Sora 2 + Image Ref</h1>
-        <p style="text-align:center; color:#00ffcc;">Viral Cinematic Prompt Generator (Gemini Vision)</p>
-
-        <form id="promptForm">
-            <label>แนวคลิปที่ต้องการ</label>
-            <select id="genre">
-                <option value="Horror">หนังผี / Horror</option>
-                <option value="Comedy">ตลก / มุกหักมุม</option>
-                <option value="Product Ad">โฆษณาสินค้า 15-45s</option>
-                <option value="UGC Review">รีวิวสินค้าแบบ UGC</option>
-                <option value="Cinematic Sci-fi">Cinematic แนว Netflix / Sci-fi</option>
-                <option value="Emotional Storytelling">เล่าเรื่องซึ้ง / ดราม่า</option>
-                <option value="Other">อื่นๆ (ระบุในช่องคำอธิบาย)</option>
-            </select>
-
-            <label>สินค้าหรือแบรนด์ (ถ้ามี)</label>
-            <input type="text" id="product" placeholder="เช่น Maybelline, iPhone 16, กาแฟ">
-
-            <label>จำนวนส่วน (Part) ของคลิป</label>
-            <input type="number" id="parts" value="1" min="1" max="10">
-
-            <label>อัปโหลดรูป Reference (ตัวละคร, สินค้า, ฉาก, mood)</label>
-            <div class="upload-area" id="dropArea">
-                <p>ลากรูปมาวาง หรือคลิกเพื่อเลือก</p>
-                <input type="file" id="imageInput" accept="image/*" multiple style="display:none;">
-            </div>
-            <div class="image-preview" id="imagePreview"></div>
-
-            <label>คำอธิบายเพิ่มเติม (ยิ่งละเอียดยิ่งดี)</label>
-            <textarea id="description" placeholder="เช่น:
-- ใช้รูปที่ 1 เป็นตัวละครหลัก
-- รูปที่ 2 เป็นบรรยากาศห้อง
-- อยากได้ jump scare ตอน 10 วินาที
-- สินค้าเป็นลิปสติกสีแดงจากรูปที่ 3"></textarea>
-
-            <button type="submit">🚀 สร้าง Prompt พร้อมวิเคราะห์รูป</button>
-        </form>
-
-        <div id="loading">กำลังวิเคราะห์รูป + สร้าง Prompt ด้วย Gemini Vision... รอสักครู่</div>
-        <div id="output"></div>
-
-        <div class="credit">Created with ❤️ by คุณและ Grok • Master Brain v.Full + Vision</div>
-    </div>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sora 2 Prompt Architect</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        const API_KEY = "AIzaSyAFwn4o9FdTleKGnLQ6Ohyx5AeH8Nik_PE";
-        const MASTER_BRAIN = `คุณคือ Viral Cinematic Director AI ที่เชี่ยวชาญ Sora 2
-        วิเคราะห์รูปภาพที่ผู้ใช้ส่งมา แล้วเพิ่มรายละเอียดลงใน Prompt อย่างแม่นยำ:
-        - หน้าตา, ทรงผม, สีผิว, เสื้อผ้า, ท่าทาง
-        - วัสดุ, แสง, สี, texture ของสินค้า/ฉาก
-        - mood, lighting style, composition
-        ต้องใช้: Face consistency, Fixed location, Continuous shot, Netflix-style lighting
-        โครงสร้าง: 0–3s Hook → 3–8s Build-up → 8–13s Payoff → 13–15s Final Impact
-        ถ้าข้อมูลไม่พอ → ถามเพิ่ม
-        Output: Prompt เต็ม + breakdown + คำแนะนำ`;
-
-        // Image Upload & Preview
-        const dropArea = document.getElementById('dropArea');
-        const imageInput = document.getElementById('imageInput');
-        const imagePreview = document.getElementById('imagePreview');
-
-        ['dragenter', 'dragover', 'dragleave', 'drop'].forEach(eventName => {
-            dropArea.addEventListener(eventName, preventDefaults, false);
-        });
-
-        function preventDefaults(e) {
-            e.preventDefault();
-            e.stopPropagation();
-        }
-
-        ['dragenter', 'dragover'].forEach(eventName => {
-            dropArea.addEventListener(eventName, () => dropArea.style.background = 'rgba(0, 255, 200, 0.2)', false);
-        });
-
-        ['dragleave', 'drop'].forEach(eventName => {
-            dropArea.addEventListener(eventName, () => dropArea.style.background = '', false);
-        });
-
-        dropArea.addEventListener('drop', handleDrop, false);
-        dropArea.addEventListener('click', () => imageInput.click());
-        imageInput.addEventListener('change', () => handleFiles(imageInput.files));
-
-        function handleDrop(e) {
-            const dt = e.dataTransfer;
-            const files = dt.files;
-            handleFiles(files);
-        }
-
-        function handleFiles(files) {
-            [...files].forEach(file => {
-                if (file.type.startsWith('image/')) {
-                    const reader = new FileReader();
-                    reader.onload = (e) => {
-                        const img = document.createElement('img');
-                        img.src = e.target.result;
-                        imagePreview.appendChild(img);
-                    };
-                    reader.readAsDataURL(file);
-                }
-            });
-            imageInput.files = files;
-        }
-
-        // Convert images to base64 array
-        async function getImagesBase64() {
-            const files = imageInput.files;
-            const base64Array = [];
-            for (let file of files) {
-                const base64 = await fileToBase64(file);
-                const mimeType = file.type;
-                base64Array.push({ inline_data: { data: base64.split(',')[1], mime_type: mimeType } });
-            }
-            return base64Array;
-        }
-
-        function fileToBase64(file) {
-            return new Promise((resolve, reject) => {
-                const reader = new FileReader();
-                reader.onload = () => resolve(reader.result);
-                reader.onerror = reject;
-                reader.readAsDataURL(file);
-            });
-        }
-
-        // Submit
-        document.getElementById('promptForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-
-            const genre = document.getElementById('genre').value;
-            const product = document.getElementById('product').value.trim();
-            const description = document.getElementById('description').value.trim();
-            const parts = document.getElementById('parts').value;
-
-            if (!description && imageInput.files.length === 0) {
-                alert('กรุณาใส่คำอธิบาย หรืออัปโหลดรูปภาพอย่างน้อย 1 รูป');
-                return;
-            }
-
-            document.getElementById('loading').style.display = 'block';
-            document.getElementById('output').style.display = 'none';
-
-            const images = await getImagesBase64();
-
-            const userMessage = {
-                parts: [
-                    { text: `แนว: ${genre}\n${product ? `สินค้า: ${product}` : ''}\nจำนวนส่วน: ${parts}\nคำอธิบาย: ${description || 'วิเคราะห์จากรูปทั้งหมด'}` }
-                ]
-            };
-
-            if (images.length > 0) {
-                userMessage.parts.push(...images.map(img => ({ inline_data: img.inline_data })));
-            }
-
-            try {
-                const response = await fetch(`https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash-latest:generateContent?key=${API_KEY}`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        system_instruction: { parts: [{ text: MASTER_BRAIN }] },
-                        contents: [{ ...userMessage }],
-                        generationConfig: {
-                            temperature: 0.8,
-                            topP: 0.95,
-                            maxOutputTokens: 8192
-                        }
-                    })
-                });
-
-                const data = await response.json();
-                const result = data.candidates?.[0]?.content?.parts?.[0]?.text || 'เกิดข้อผิดพลาด';
-
-                document.getElementById('output').textContent = result;
-                document.getElementById('output').style.display = 'block';
-            } catch (error) {
-                document.getElementById('output').textContent = 'Error: ' + error.message;
-                document.getElementById('output').style.display = 'block';
-            }
-
-            document.getElementById('loading').style.display = 'none';
-        });
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              'brand-bg': '#0a090e',
+              'brand-surface': '#1c1b22',
+              'brand-primary': '#8a4fff',
+              'brand-secondary': '#3c3a47',
+              'brand-accent': '#00f5d4',
+              'brand-text-light': '#f0f0f0',
+              'brand-text-dark': '#a0a0a0',
+            },
+            animation: {
+              'fade-in': 'fadeIn 0.5s ease-in-out',
+              'pulse-fast': 'pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+            },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: 0 },
+                '100%': { opacity: 1 },
+              },
+            },
+          },
+        },
+      }
     </script>
-</body>
+  <script type="importmap">
+{
+  "imports": {
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.1"
+  }
+}
+</script>
+<link rel="stylesheet" href="/index.css">
+</head>
+  <body class="bg-brand-bg text-brand-text-light font-sans">
+    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
