--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
 </head>
   <body class="bg-brand-bg text-brand-text-light font-sans">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
