--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sora 2 Prompt Architect</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- ADDED: The "Live Translator" (Babel) that allows browser to understand TSX -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -47,6 +48,8 @@
 </head>
   <body class="bg-brand-bg text-brand-text-light font-sans">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
-  </body>
+    <!-- CHANGED: script type to "text/babel" and added data-type="module" to tell the translator to process this file -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
